--- a/src/Comonents/Testimonials.css
+++ b/src/Comonents/Testimonials.css
@@ -1,9 +1,11 @@
 .testimonials--container {
   width: 40%;
 }
-
+.client--name {
+  font-size: large;
+}
 .client--avatar {
-  width: 4rem;
+  width: 7rem;
   aspect-ratio: 1/1;
   overflow: hidden;
   border-radius: 50%;
@@ -17,6 +19,7 @@
   padding: 2rem;
   border-radius: 2rem;
   user-select: none;
+  height: inherit;
 }
 
 .client--review {
