Fixed CSS names and scrolling on home click - Deleted unwanted files

--- a/src/Comonents/Portfolio.css
+++ b/src/Comonents/Portfolio.css
@@ -1,4 +1,4 @@
-.portfolio__container {
+.portfolio--container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
@@ -32,13 +32,13 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .portfolio__container {
+  .portfolio--container {
     grid-template-columns: 1fr 1fr;
     gap: 1.2rem;
   }
 }
 @media screen and (max-width: 600px) {
-  .portfolio__container {
+  .portfolio--container {
     grid-template-columns: 1fr;
     gap: 1rem;
   }
