--- a/src/Comonents/About.css
+++ b/src/Comonents/About.css
@@ -1,10 +1,10 @@
-.about__container {
+.about--container {
   display: grid;
   grid-template-columns: 35% 50%;
   justify-content: space-between;
 }
 
-.about__me {
+.about--me {
   width: 100%;
   border-radius: 2rem;
   background: linear-gradient(
@@ -17,23 +17,23 @@
   align-items: center;
 }
 
-.about__me-img {
+.about--me-img {
   border-radius: 2rem;
   overflow: hidden;
   transform: rotate(10deg);
   transition: var(--transition);
 }
 
-.about__me-img:hover {
+.about--me-img:hover {
   transform: rotate(0);
 }
 
-.about__cards {
+.about--cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
 }
-.about__card {
+.about--card {
   background: var(--color-bg-varient);
   border: 1px solid transparent;
   border-radius: 1rem;
@@ -42,60 +42,59 @@
   transition: var(--transition);
 }
 
-.about__card:hover {
+.about--card:hover {
   background: transparent;
   border-color: var(--color-primary-varient);
   cursor: default;
 }
 
-.about__icon {
+.about--icon {
   color: var(--color-primary);
   font-size: 1.4rem;
   margin-bottom: 1rem;
 }
 
-.about__card h5 {
+.about--card h5 {
   font-size: 0.95rem;
 }
 
-.about__card small {
+.about--card small {
   font-size: 0.7rem;
   color: var(--color-light);
 }
 
-.about__content p {
+.about--content p {
   margin: 2rem 0 2.6rem;
   color: var(--color-light);
 }
 
 @media screen and (max-width: 1024px) {
-  /* SMALL */
-  .about__container {
+  .about--container {
     grid-template-columns: 1fr;
     gap: 0;
   }
-  .about__me {
+  .about--me {
     width: 50%;
     margin: 2rem auto 4rem;
   }
-  .about__content p {
+  .about--content p {
     margin: 1rem 0 1.5rem;
   }
 }
 @media screen and (max-width: 600px) {
-  .about__me {
+  .about--me {
     width: 65%;
     margin: 0 auto 3rem;
   }
 
-  .about__card {
+  .about--cards {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
-  .about__content {
+  .about--content {
     text-align: center;
   }
-  .about__content p {
+  .about--content p {
     margin: 1.5rem 0;
   }
 }
