--- a/src/Comonents/Services.css
+++ b/src/Comonents/Services.css
@@ -1,4 +1,4 @@
-.services__container {
+.services--container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 3rem;
@@ -16,38 +16,38 @@
   border-color: var(--color-primary-varient);
 }
 
-.service__head {
+.service--head {
   background: var(--color-primary);
   padding: 2rem;
   border-radius: 0 0 2rem 2rem;
   box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
 }
-.service__head h3 {
+.service--head h3 {
   color: var(--color-bg);
   font-size: 1rem;
   text-align: center;
 }
 
-.service__list {
+.service--list {
   padding: 2rem;
 }
-.service__list li {
+.service--list li {
   display: flex;
   gap: 1rem;
   margin-bottom: 0.8rem;
 }
-.service__list-icon {
+.service--list-icon {
   color: var(--color-primary);
   margin-top: 2px;
   font-size: 2rem;
 }
-.service__list p {
+.service--list p {
   font-size: 0.9rem;
 }
 
 @media screen and (max-width: 1024px) {
   /* SMALL */
-  .services__container {
+  .services--container {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
   }
@@ -56,7 +56,7 @@
   }
 }
 @media screen and (max-width: 600px) {
-  .services__container {
+  .services--container {
     grid-template-columns: 1fr;
     gap: 1.5rem;
   }
